# nix-templates

./: .gitignore  README.md  flake.nix
ads/: flake.nix
basic-template/: flake.nix
cpp/: Makefile  dprint.json  flake.nix  main.cpp
cpp/.helix/: config.toml  languages.toml
dotnet/: flake.nix
fastapi-htmx-tailwind/: .gitignore  flake.nix  pyproject.toml  tailwind.config.js
fastapi-htmx-tailwind/src/my_project/: __init__.py  __main__.py  app.py
fastapi-htmx-tailwind/templates/: base.jinja  index.jinja
golang/: flake.nix
golang/.helix/: languages.toml
mojo/: flake.nix
python-uv/: flake.nix
python-uv/.helix/: languages.toml
rust/: flake.nix
rust/.helix/: languages.toml
templ-htmx-tailwind/: .air.toml  README.md  flake.nix  go.mod  main.go  tailwind.config.js
templ-htmx-tailwind/app/base/: view.templ
templ-htmx-tailwind/app/index/: view.templ
typst/: flake.nix
zig/: build.zig  build.zig.zon  flake.nix
zig/.helix/: languages.toml
